# cfl-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
cfl/: __init__.py  client.py  constants.py  leaderboard.py  logger.py  types.py
