[project]
name = "cfl"
version = "0.1.0"
description = "SDK for CFL API"
authors = [
    {name = "OJ Adeyemi",email = "ojieadeyemi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx[http2] (>=0.28,<0.29)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
